fix: QA 1차 수정 - 친구 추천 로직 수정 및 친구의 친구 추천 로직 수정